Zero and minimal VM build failure after JDK-8241071 (MetaspaceShared::symbol_space_alloc is undefined)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 15
    • Affects Version/s: None
    • Component/s: hotspot
    • b22

      * Symptom
      ```
      jdk/src/hotspot/share/oops/symbol.cpp:69: undefined reference to `MetaspaceShared::symbol_space_alloc(unsigned long)'
      collect2: error: ld returned 1 exit status
      ```

      * It might be fixed by
      ```
      diff -r 1cfd2ca0b769 src/hotspot/share/memory/metaspaceShared.hpp
      --- a/src/hotspot/share/memory/metaspaceShared.hpp Tue May 05 11:10:02 2020 -0700
      +++ b/src/hotspot/share/memory/metaspaceShared.hpp Wed May 06 07:05:32 2020 +0800
      @@ -309,7 +309,7 @@
       #endif
       
         // Allocate a block of memory from the temporary "symbol" region.
      - static char* symbol_space_alloc(size_t num_bytes);
      + static char* symbol_space_alloc(size_t num_bytes) NOT_CDS_RETURN_(NULL);
       
         // Allocate a block of memory from the "mc" or "ro" regions.
         static char* misc_code_space_alloc(size_t num_bytes);
      ```

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: